# motorized-lego-railroad-switch

./: .gitmodules  CMakeLists.txt  wifi.cmake
app/: CMakeLists.txt
app-picopad/: CMakeLists.txt
app-picopad/boards/: Picopad.cmake
app-picopad/src/: DebugLog.cpp  DebugLog.h  RailwayDeviceController.cpp  RailwayDeviceController.h  Ui.cpp  Ui.h  lwipopts.h  main.cpp
app/src/: Device.h  DeviceManager.cpp  DeviceManager.h  DeviceWidget.cpp  DeviceWidget.h  DeviceWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  resources.qrc
firmware/: CMakeLists.txt
firmware/src/: RailwayProtocol.cpp  RailwayProtocol.h  main.cpp
shared/: RailwayDevice.h  RailwayDeviceManager.cpp  RailwayDeviceManager.h  RailwayLwIPPacketSender.cpp  RailwayLwIPPacketSender.h  RailwayProtocol.cpp  RailwayProtocol.h  ReplicatedVariable.h
src/: main.cpp
tools/: broadcast-udp.py  dump-udp.py
